--- a/style.css
+++ b/style.css
@@ -3,19 +3,14 @@
 /* Conmebol Copa America 2021 */
 body {
     position: relative;
-
-
     background: #FFFFFF;
 }
 
 #first-pic {
     width: 1250px;
     height: 577px;
-
     top: 0px;
-
     background: #2D25A0;
-
 }
 
 #short-text {
@@ -24,14 +19,12 @@ body {
     height: 230px;
     left: 151px;
     top: 107px;
-
     font-family: 'poppins', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 64px;
     line-height: 80px;
     /* or 125% */
-
     color: #FFFFFF;
 }
 
@@ -45,14 +38,12 @@ body {
     border: 1px solid;
     border-color: tomato;
     padding: 2px;
-
 }
 
 #artical-link:hover {
     background-color: greenyellow;
     color: darkslategrey;
     border-radius: 5px;
-
 }
 
 .football {
@@ -74,29 +65,21 @@ body {
 .players-naymer {
     display: grid;
     flex-direction: column;
-
     margin: 30px 30px 10px 120px;
     padding: 3px 3px 3px 3px;
     border: 1px solid #ccc;
-    float: left;
     width: 280px;
-
     background: #FFFFFF;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
-
 }
 
 .players-lionel {
     display: flex;
     flex-direction: column;
-
-
     margin: 30px 30px 10px 10px;
     padding: 3px 3px 3px 3px;
     border: 1px solid #ccc;
-    float: left;
     width: 280px;
-
     background: #FFFFFF;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
 }
@@ -104,32 +87,21 @@ body {
 .players-cristiano {
     display: flex;
     flex-direction: column;
-
     width: 280px;
-
     position: static;
     border: 1px solid #ccc;
-    float: left;
     margin: 30px 30px 10px 10px;
-    ;
     padding: 3px 3px 3px 3px;
-
-
     background: #FFFFFF;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
-
-
 }
 
 .players-paulo {
     display: flex;
     flex-direction: column;
-
     width: 280px;
-
     position: static;
     border: 1px solid #ccc;
-    float: left;
     margin: 10px 30px 10px 120px;
     padding: 3px 3px 3px 3px;
     background: #FFFFFF;
@@ -139,43 +111,29 @@ body {
 .players-mesut {
     display: flex;
     flex-direction: column;
-
     width: 280px;
-
     position: static;
     border: 1px solid #ccc;
-    float: left;
     margin: 10px 30px 10px 10px;
-    ;
     padding: 3px 3px 3px 3px;
-
     background: #FFFFFF;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
-
 }
 
 .players-mauro {
     /* /* Auto Layout  */
-
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-
-
     width: 280px;
-
     position: static;
     border: 1px solid #ccc;
-    float: left;
     margin: 10px 30px 10px 10px;
-    ;
     padding: 3px 3px 3px 3px;
-
     background: #FFFFFF;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
 
     /*  Inside Auto Layout  */
-
 }
 
 .players-maria {
@@ -183,17 +141,12 @@ body {
     flex-direction: column;
     align-items: flex-start;
     width: 280px;
-
     position: static;
     border: 1px solid #ccc;
-    float: left;
+   
     margin: 30px 30px 10px 120px;
     padding: 3px 3px 3px 3px;
-
-
     /* /* Inside Auto Layout  */
-
-
 }
 
 .players-kylian {
@@ -203,41 +156,27 @@ body {
     flex-direction: column;
     align-items: flex-start;
     width: 280px;
-
     position: static;
     border: 1px solid #ccc;
-    float: left;
+    
     margin: 30px 10px 10px 10px;
     padding: 3px 3px 3px 3px;
-
     background: #FFFFFF;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
 
     /* /* Inside Auto Layout  */
-
-
 }
 
 /* /* Auto Layout  */
 .players-mohamed {
-
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     width: 280px;
-
     position: static;
     border: 1px solid #ccc;
-    float: left;
-    margin: 30px 10px 10px 30px;
     padding: 3px 3px 3px 3px;
-
-
-    flex: none;
-    order: 0;
-    flex-grow: 0;
     margin: 30px 10px 10px 10px;
-
 
 }
 
@@ -245,33 +184,28 @@ body {
     width: 100%;
 }
 
-.bb {
-    display: flex;
-    flex-direction: row;
+.fantesty-container {
+    margin-top: 5%;
 
 
+} 
+
+.fantesty{
+display: flex;
 }
 
 .second-part img {
-    width: 560px;
+    width: 550px;
     height: 470px;
-    margin-left: 750px;
     display: flex;
     flex-direction: row;
 }
 
-.text {
-    display: flex;
-    text-align: center;
-    position: absolute;
-    font-family: 'poppins', sans-serif;
-    color: black;
-    text-align: center;
-    cursor: pointer;
-
-
-    margin-left: 50px;
-    margin-top: 300px;
+.second-blogs{
+    margin-top: 10%;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
 }
 
 
